kubernetes/projects/applications/apps/devfeed/networkpolicy-search.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devfeed-search-ingress
  namespace: devfeed
  labels:
    app.kubernetes.io/part-of: devfeed
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: devfeed-typesense
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              devfeed-search-client: 'true'
      ports:
        - protocol: TCP
          port: 8108
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: devfeed-search-egress
  namespace: devfeed
  labels:
    app.kubernetes.io/part-of: devfeed
spec:
  podSelector:
    matchLabels:
      devfeed-search-client: 'true'
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: devfeed-typesense
      ports:
        - protocol: TCP
          port: 8108
